fixing history cea size on ie

--- a/app/assets/stylesheets/screen.scss
+++ b/app/assets/stylesheets/screen.scss
@@ -287,7 +287,7 @@ blockquote {
 }
 
 #historia {
-  height: 960px;
+  height: 1020px;
 
   img {
     width: 90%;
